# mercury-parserpy

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
mercury_parser/: __init__.py  client.py  exceptions.py
mercury_parser/tests/: test_parser.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
tests/: test_parser.py  utils.py
