[metadata]
name = mercury-parserpy
version = 0.7.0
author = Alessandro De Angelis
author_email = alessandrodea22@gmail.com
license = MIT
url = https://github.com/Girbons/mercury-parserpy

[options]
packages = find:
install_requires = requests

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
